fdo#78599: Fixed for file corruption which contains fields and hyperlink

Field inside a hyperlink closed after the ending tag of hyperlink, which corrupted the RT file.

Change-Id: Ib89ead8d2f8a9eb6c8473ffd14853495ee1b2f62